--- a/index.css
+++ b/index.css
@@ -134,7 +134,7 @@ p{
     line-height: 1.4;
 }
 .news-subtitle{
-    color: #452829;
+    color: #FFF8DE;
     display: block;
     font-size: 1.5rem;
     margin-top: 10px;
