--- a/index.css
+++ b/index.css
@@ -14,7 +14,9 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 35%;
+    max-width: 100%;
+    height: auto;
+    vertical-align: bottom;
 }
 .about{
     max-width: 736px;
@@ -51,10 +53,17 @@ p{
     font-family: "LXGW WenKai Mono TC", monospace;
     font-weight: bold;
 }
-.page-title,
-.heading-large,
-.heading-meduim{
+.page-title{
+    color:#FFF8DE;
     font-size: 3rem;
+    text-align: center;
+    margin-top: 4rem;
+    line-height: 1.4;
+}
+
+.heading-large,
+.heading-medium{
+    font-size: 2.5rem;
     text-align: center;
     margin-top: 2rem;
     line-height: 1.4;
@@ -67,9 +76,15 @@ p{
 
 /*副標題*/
 .subtitle{
+    color: #FFF8DE;
     display: block;
     font-size: 1.5rem;
     margin-top: 10px;
+    font-weight: bolder;
+}
+.side-menu{
+    font-size: 1.4rem;
+    text-align: center;
     font-weight: bolder;
 }
 
@@ -112,7 +127,7 @@ p{
 .cover{
     background-size: cover;
     background-position: center;
-    height: 1500px;
+    height: 100vh;
 }
 .sub-cover{
     background-size: cover;
@@ -129,18 +144,21 @@ p{
     background-image: url(back2.jpg);
 }
 .news-title{
-    color:#FFF8DE;
+    color:#B77466;
     font-size: 3rem;
     text-align: center;
-    margin-top: 10rem;
+    margin-top: 4rem;
     line-height: 1.4;
 }
 .news-subtitle{
-    color: #FFF8DE;
+    color: #B77466;
     display: block;
     font-size: 1.5rem;
     margin-top: 10px;
     font-weight: bolder;
+}
+h2{
+    margin-bottom: 3rem;
 }
 
 /*消息文章*/
@@ -219,8 +237,8 @@ p{
     transition: .5s;
 }
 .ad img{
-    height: 35rem;
-    width: 40rem;
+    width: 100%;
+    border-radius: 8px;
     
 }
 
@@ -261,17 +279,26 @@ p{
     padding-top: 2rem;
 }
 
-/*響應式(媒體查詢Media Queries)電腦版*/
+/*響應式(媒體查詢Media Queries)-電腦版畫面*/
 @media(min-width: 800px){
     /*標題*/
     .page-title{
+        color: #B77466;
         font-size: 5rem;
+    }
+    .subtitle{
+        color: #B77466;
+        height: auto;
+        margin-bottom: 0;
     }
     .heading-large{
         font-size: 4rem;
     }
     .post-title{
         font-size: 2rem;
+    }
+    .news-title{
+        margin-top: 6rem;
     }
     .news-title,
     .news-subtitle{
@@ -280,7 +307,7 @@ p{
    
     /*電腦版LOGO*/
     .logo{
-        width: 450px;
+        width: 300px;
     }
 
     /*Header*/
@@ -288,38 +315,56 @@ p{
         display: flex;
         justify-content: space-between;
         padding-top: 1.5rem;
+        align-items: center;
     }
     .main-nav{
         font-size: 2rem;
     }
+    .cover{
+        height: auto;
+    }
 
     /*Header Cover圖片*/
     .sub-cover{
-        height: 400px;
-        margin-bottom: 8rem;
+        height: auto;
+        margin-bottom: 0;
     }
 
     /*News*/
+    h2{
+    margin-bottom: 3rem;
+    }
     .news-contents{
         display: flex;
         justify-content: space-between;
+        gap: 20px;
     }
     .post{
-        width: 60%;
+        width: 56%;
         order: 2;
     }
     .sidebar{
-        width: 22%;
+        width: 20%;
         order: 3;
     }
     .ad{
+        width: 20%;
         order: 1;
     }
     .sidebar,
-    .heading-meduim{
+    .heading-medium{
         line-height: 1;
         margin-bottom: 1rem;
     }
+    .ad img{
+        width: 100%;
+        height: auto;
+    }
+    .side-menu{
+    font-size: 1.7rem;
+    text-align: center;
+    font-weight: bolder;
+}
 
     /*Home*/
     .cover-home{
