--- a/index.css
+++ b/index.css
@@ -239,6 +239,7 @@ h2{
 .ad img{
     width: 85%;
     border-radius: 8px;
+    margin-bottom: 1rem;
     
 }
 
@@ -367,6 +368,7 @@ h2{
     .ad img{
         width: 100%;
         height: auto;
+       margin-bottom: .25rem;
     }
     .side-menu{
     font-size: 1.7rem;
