--- a/index.css
+++ b/index.css
@@ -218,6 +218,39 @@ h2{
     font-weight: bolder;
 }
 
+/*菜單*/
+.cover-menu{
+    background-image: url(back2.jpg);
+}
+.menu-title{
+    color:#B77466;
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 4rem;
+    line-height: 1.4;
+}
+.menu-subtitle{
+    color: #B77466;
+    display: block;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    font-weight: bolder;
+}
+.grid{
+    display: grid;
+    gap: 2rem 1.5rem;
+    grid-template-columns: repeat(2,1fr);
+    text-align: center;
+}
+.item img{
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 16px;
+}
+.item p{
+    font-size: .875rem;
+}
+
 /*側邊欄*/
 .side-menu{
     list-style: none;
@@ -374,7 +407,31 @@ h2{
     font-size: 1.7rem;
     text-align: center;
     font-weight: bolder;
-}
+    }
+
+    /*Menu*/
+    .cover-menu{
+        background-image: url(back2.jpg);
+    }
+    .grid{
+        gap: 3rem 2rem;
+        grid-template-columns: repeat(3,1fr);
+        margin-bottom: 1rem;
+    }
+    .item img{
+        margin-bottom: .5rem;
+    }
+    .item p{
+        font-size: 1rem;
+    }
+    .item-big{
+        grid-column: 1/3;
+        grid-row: 1/3;
+    }
+    .item-big img{
+        height: 94.5%;
+        width: 100%;
+    }
 
     /*Home*/
     .cover-home{
