--- a/index.css
+++ b/index.css
@@ -370,9 +370,9 @@ h2{
     }
 
     /*News*/
-    .cover-news{
+    /*.cover-news{
     background-image: url(back2.jpg);
-    }
+    }*/
     h2{
     margin-bottom: 3rem;
     }
@@ -410,9 +410,9 @@ h2{
     }
 
     /*Menu*/
-    .cover-menu{
+    /*.cover-menu{
         background-image: url(back2.jpg);
-    }
+    }*/
     .grid{
         gap: 3rem 2rem;
         grid-template-columns: repeat(3,1fr);
@@ -434,17 +434,17 @@ h2{
     }
 
     /*Home*/
-    .cover-home{
+    /*.cover-home{
     background-image: url(back2.jpg);
-    }
+    }*/
 
     /*Footer*/
-    .page-footer{
+    /*.page-footer{
     background-image: url(back4.jpg);
     background-size: cover;
     background-position: center;
     padding-top: 1rem;
-    }
+    }*/
     .info th{
         padding-left: 2.5rem;
     }
