--- a/index.css
+++ b/index.css
@@ -251,6 +251,53 @@ h2{
     font-size: .875rem;
 }
 
+/*聯絡我們*/
+.cover-contact{
+    background-image: url(back2.jpg);
+}
+.contact-title{
+    color:#B77466;
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 4rem;
+    line-height: 1.4;
+}
+.contact-subtitle{
+    color: #B77466;
+    display: block;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    font-weight: bolder;
+}
+.email{
+    max-width: 916px;
+    background-color: #EEE6CA;
+    border-radius: 48px;
+    padding: 1.5rem 2.5rem 2.5rem;
+    margin: 0 auto 2rem;
+}
+.email p{
+    text-align: center;
+    margin: 1rem 0 2rem;
+}
+
+/*店家資訊*/
+.location{
+    margin-bottom: 3.5rem;
+}
+.location-info{
+    margin-bottom: 2rem;
+}
+.location-info,
+.info{
+    padding: 0;
+}
+
+/*iframe*/
+iframe{
+    width: 100%;
+}
+
 /*側邊欄*/
 .side-menu{
     list-style: none;
